...
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_margin"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancel_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> createEventFragment.cancelEvent()}"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorSecondaryVariant"
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/submit_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> createEventFragment.createModifyEvent()}"
                    android:text="@string/add"
                    android:textColor="?attr/colorSecondaryVariant"
...
                                android:id="@+id/pick_time_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pick_time"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@id/inputTimeFrom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/inputTimeFrom" />

                            <Button
                                android:id="@+id/inputTimeFrom"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
...
                                android:layout_height="wrap_content"
                                app:errorEnabled="true"
                                app:layout_constraintStart_toStartOf="@id/inputTimeFrom"
                                app:layout_constraintTop_toBottomOf="@id/inputTimeFrom" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/conflict_check"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:padding="5dp"
                                android:text="@string/check_for_conflicts"
                                android:textSize="20sp"
...
