<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dashboard_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:clipToPadding="false"
        android:focusable="true"
        android:padding="16dp"
        android:scrollbars="vertical"
        tools:clickable="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-223dp"
        tools:listitem="@layout/group_events_view" />


</androidx.constraintlayout.widget.ConstraintLayout>